--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
      <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.4.4&key=c88134db647a18be26652046bc03c123&plugin=AMap.CitySearch"></script>
+      <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
     <title>大健康app</title>
   </head>
   <body>
