--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="x5-orientation" content="portrait">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0,minimum-scale=1.0,maximum-scale=1.0" />
-     <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.4.4&key=c88134db647a18be26652046bc03c123&plugin=AMap.CitySearch"></script>
-      <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
-    <title>大健康app</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+	<head>
+		<meta charset="utf-8">
+		<meta name="x5-orientation" content="portrait">
+		<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0,minimum-scale=1.0,maximum-scale=1.0" />
+		<script type="text/javascript" src="http://webapi.amap.com/maps?v=1.4.4&key=c88134db647a18be26652046bc03c123&plugin=AMap.CitySearch"></script>
+		<script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+		<script src="http://res.wx.qq.com/connect/zh_CN/htmledition/js/wxLogin.js"></script>
+		<title>大健康app</title>
+	</head>
+
+	<body>
+		<div id="app"></div>
+		<!-- built files will be auto injected -->
+	</body>
+
 </html>
